# HitPicks

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: README.md
backend/src/bts/: predictor.py
backend/tests/: test_factors.py  test_probability.py
frontend/: README.md
src/bts/: __init__.py  backtest.py  cache.py  cli.py  client.py  config.py  factors.py  models.py  probability.py  report.py  strategy.py
tests/: conftest.py
